--- a/src/app/Components/ride-map-assembly/ride-map-assembly.component.scss
+++ b/src/app/Components/ride-map-assembly/ride-map-assembly.component.scss
@@ -35,6 +35,9 @@
     .wrap2 {
     	padding-left: 10px;
     }
+    .wrap3{
+        float: right;
+    }
 }
 
 #btn1 {
@@ -62,6 +65,16 @@
     padding: 0px;
     float: left;
     background: url('../../../assets/icon/bicycle.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#btn4 {
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    float: left;
+    background: url('../../../assets/icon/flag.svg');
     background-repeat: no-repeat;
     background-position: center;
 }
