text in toggle for ios

--- a/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
+++ b/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
@@ -67,12 +67,12 @@
       </ion-col>
       <ion-col class="col-adjust" size="10">
         <ion-range
-          style="margin-left: 10px; color: rgb(253, 223, 223);"
+          style="margin-left: 10px;"
           [(ngModel)]="rangeVolume"
           pin="true"
           min="0"
           max="10"
-          color="light"
+          color="success"
           snaps="true"
           ticks="false"
         ></ion-range>
