--- a/src/app/Components/router-start/router-start.component.html
+++ b/src/app/Components/router-start/router-start.component.html
@@ -1,14 +1,4 @@
-<!-- <div class="over">
-
-   <div class="wrap" style="vertical-align: middle;">
-      <button ion-button id="btn1" (click)=startRoute()></button> 
-   </div>
-
-    <div class="wrap">
-      <button ion-button id="btn3" (click)="closeView()"></button> 
-   </div>
-</div> -->
-<!-- <div class="over" id="myOver">
+<div class="over" id="myOver">
    <div class="wrap1">
        <button ion-button class="btn1" id="hide-div"></button>
        <button ion-button class="btn1" id="show-div" hidden="true"></button>
@@ -24,7 +14,7 @@
         <button ion-button id="trash" (click)="deleteAPPoints()" hidden>
             <ion-icon name="trash" style="font-size: 30px; color: white; --ionicon-stroke-width: 20px;"></ion-icon>
         </button>
-   </div> -->
+   </div>
    <!-- <div class="wrap wrap2">
    </div> -->
    <!-- <div class="wrap wrap3">
@@ -39,10 +29,10 @@
            <input type="checkbox" class="riod-toggle" /> onclick='handleClick(this);'
        </div>
    </div> -->
-<!-- </div> -->
+</div>
 
 
-<ion-header style="background-color: #383838; height: 12vh; border-radius: 12px 12px 0px 0px;" mode="ios" id="header">
+<!-- <ion-header style="background-color: #383838; height: 12vh; border-radius: 12px 12px 0px 0px;" mode="ios" id="header">
     <ion-grid> 
     <ion-row>
        <ion-col [hidden]="lastLeg" size="2">
@@ -58,14 +48,14 @@
   
      <ion-row [hidden]="sammelpunktLeg">
       <ion-col  size="2">
-       <!-- <h1 class="icon-align"><ion-icon slot="start" src="../../../assets/icon/assemblypoint1.svg"></ion-icon></h1> -->
+       <h1 class="icon-align"><ion-icon slot="start" src="../../../assets/icon/assemblypoint1.svg"></ion-icon></h1>
       </ion-col>
       <ion-col size="2">
        <ion-row class="text-row top"><h4 class="text toptext">Ankunft</h4></ion-row>
        <ion-row class="text-row"><h3 class="text">{{timeToTarget}}</h3></ion-row>
      </ion-col>
      <ion-col  size="2">
-       <!-- <h1 class="icon-align"><ion-icon slot="start" name="bike"></ion-icon></h1> -->
+       <h1 class="icon-align"><ion-icon slot="start" name="bike"></ion-icon></h1>
       </ion-col>
       <ion-col size="2">
        <ion-row class="text-row top"><h4 class="text toptext">Bald da:</h4></ion-row>
@@ -75,11 +65,13 @@
     </ion-row>
   
     </ion-grid>
-    <!-- <ion-toolbar mode="md">
+
+    <ion-toolbar mode="md">
       <ion-title>{{title}}</ion-title>
-    </ion-toolbar> -->
+    </ion-toolbar>
+
   </ion-header>
    <ion-content>
      <h1>halloooootest</h1>
-     <!-- <ng-content ></ng-content> -->
-  </ion-content>
+     <ng-content ></ng-content>
+  </ion-content> -->
