--- a/src/app/Components/riding-info/riding-info.component.html
+++ b/src/app/Components/riding-info/riding-info.component.html
@@ -1,5 +1,5 @@
 
-<ion-header style="background-color: #383838; height: 10.5vh; min-height: 94px; border-radius: 12px 12px 0px 0px;" mode="ios" id="header">
+<ion-header style="background-color: #383838; height: 10.5vh; min-height: 88px; border-radius: 12px 12px 0px 0px;" mode="ios" id="header">
   <ion-grid> 
     <ion-row >
       <ion-col size="5"></ion-col>
@@ -63,24 +63,24 @@
   </ion-toolbar> -->
 </ion-header>
  <ion-content >
-   <!-- <ion-row [hidden]="lastLeg" class="info-margin">
-     <ion-col size="8">
-      <p class="info-text">Fahre zu dem nächsten Sammelpunkt auf deiner Route</p>
+    <ion-row [hidden]="lastLeg"  class="info-margin">
+     <ion-col size="9">
+      <p class="info-text">last leg</p>
      </ion-col>
-     <ion-col size="4">
+     <ion-col size="3">
      </ion-col>
   </ion-row>
 
   <ion-content>
-    <ion-row [hidden]="atSammelpunkt" class="info-margin">
-      <ion-col size="8">
+    <ion-row [hidden]="atSammelpunkt" class="info-margin" >
+      <ion-col size="9">
        <p class="info-text">at sammelpunkt</p>
       </ion-col>
-      <ion-col size="4">
+      <ion-col size="3">
       </ion-col>
-   </ion-row> -->
+   </ion-row> 
 
-  <ion-row [hidden]="toSammelpunktLeg" >
+  <ion-row [hidden]="toSammelpunktLeg" class="info-margin" >
     <ion-col size="9">
       <!-- <h1>hallooo</h1> -->
      <p class="info-text">Fahre zu dem nächsten Sammelpunkt auf deiner Route</p>
