--- a/src/app/Components/riding-info/riding-info.component.scss
+++ b/src/app/Components/riding-info/riding-info.component.scss
@@ -36,7 +36,7 @@ opacity: 0.2;
 }
 
 .info-margin{
-    margin-top: 2vh;
+    margin-top: -2vh;
 }
 
 .padding-top{
@@ -60,6 +60,7 @@ opacity: 0.2;
     border-radius: 15px;
     height: 6px;
     width: 100%;
+    opacity: 0.2;
 }
 
 
