--- a/src/app/Components/riding-info/riding-info.component.html
+++ b/src/app/Components/riding-info/riding-info.component.html
@@ -65,7 +65,7 @@
  <ion-content >
     <ion-row [hidden]="lastLeg"  class="info-margin">
      <ion-col size="9">
-      <p class="info-text">last leg</p>
+      <p class="info-text">in {{timeToTarget}} hast du dein Ziel erreicht!</p>
      </ion-col>
      <ion-col size="3">
      </ion-col>
@@ -74,7 +74,7 @@
   <ion-content>
     <ion-row [hidden]="atSammelpunkt" class="info-margin" >
       <ion-col size="9">
-       <p class="info-text">at sammelpunkt</p>
+       <p class="info-text">in maximal {{timeToTarget}} werden 7 weitere RIODS zusammen mit dir weiterfahren.</p>
       </ion-col>
       <ion-col size="3">
       </ion-col>
