--- a/src/app/pages/map/map-start/map-start.page.html
+++ b/src/app/pages/map/map-start/map-start.page.html
@@ -3,7 +3,6 @@
 </ion-header>
 <map-box></map-box>
 
-
 <ion-row id="ONLY FOR TESTING" style="position: absolute; bottom: 50px;">
   <ion-button
     color="tertiary"
@@ -11,7 +10,7 @@
     style="height: 60px; width: 60px;"
     (click)="locateDevice()"
   >
-    <div> 
+    <div>
       <ion-icon icon="locate-outline"></ion-icon>
     </div>
   </ion-button>
@@ -47,17 +46,25 @@
   </ion-button>
 </ion-row>
 
-
-<riding-toggle  style="width: fit-content; align-self: flex-end; margin-bottom: -35.2vh; margin-right: 7vw;"></riding-toggle> 
+<riding-toggle
+  style="
+    /* width: fit-content; align-self: flex-end; margin-bottom: -35.2vh; margin-right: 7vw; */
+    position: absolute;
+    bottom: 2.6vh;
+    right: 3vh;
+  "
+></riding-toggle>
 
 <!-- @Frontend FIXME: This DIV is slightly moved up, may be related to riding-toggle margin-bottom -->
-<div #indicatorScreen style="z-index: 10; transform: translateY(100%);">
+<div
+  #indicatorScreen
+  style="z-index: 10; transform: translateY(100%); margin-top: -16vh;"
+>
   <app-ride-indicator></app-ride-indicator>
 </div>
 <div [ngSwitch]="showType">
-
-  <router-start  *ngSwitchCase="'showMain'"></router-start>
-  <app-riding-info  *ngSwitchCase="'showRouterInfo'" ></app-riding-info>
+  <router-start *ngSwitchCase="'showMain'"></router-start>
+  <app-riding-info *ngSwitchCase="'showRouterInfo'"></app-riding-info>
   <!-- DONT USE THIS! LINE 52 WORKS AS WELL <riding-toggle *ngSwitchCase="''" style="width: fit-content; align-self: flex-end; margin-bottom: 2.8vh; margin-right: 7vw;"></riding-toggle>  -->
-  <ride-map-assembly *ngSwitchCase="'routeStarted'" ></ride-map-assembly>
+  <ride-map-assembly *ngSwitchCase="'routeStarted'"></ride-map-assembly>
 </div>
