--- a/src/app/pages/map/map-start/map-start.page.scss
+++ b/src/app/pages/map/map-start/map-start.page.scss
@@ -8,11 +8,11 @@
 }
 
 #closeWindow {
-    width: 10%;
-    // height: 10%;
-    border-radius: 100px;
-    background-color: #4f4f4f;
+    width: 45px;
+    height: 45px;
+    border-radius: 50px;
+    background-color: #454545;
     float: right;
-    margin-top: 10px;
-    margin-right: 10px;
+    margin-top: 4.5px;
+    margin-right: 4.5px;
 }
