--- a/src/app/Components/router-start/router-start.component.html
+++ b/src/app/Components/router-start/router-start.component.html
@@ -26,9 +26,9 @@
         </div>
       </ion-col>
     </ion-row> -->
-    <ion-row id="selectAP" hidden>
+    <ion-row id="selectAP" >
       <ion-col>
-        <button ion-button id="createRouteButton" (click)="startRoute()">
+        <button ion-button id="createRouteButton" (click)="startRoute()" [disabled]="disableCreateButton">
           ROUTE ERSTELLEN
         </button>
       </ion-col>
@@ -47,7 +47,7 @@
         </button>
       </ion-col>
     </ion-row>
-    <ion-row id="startRoute">
+    <ion-row id="startRoute" hidden>
       <ion-col>
         <button ion-button id="startButton" (click)="startNavi()">
           START
@@ -75,6 +75,22 @@
 </ion-header>
 
 <ion-content>
-  <h1>halloooootest</h1>
-  <!-- <ng-content ></ng-content> -->
+  <ion-grid>
+    <ion-row style="height: 2%;">
+<!-- spacing  -->
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+        <ion-icon id="userPosition"></ion-icon>
+      </ion-col>
+
+      <ion-col>
+
+      </ion-col>
+
+      <ion-col size="3">
+        <ion-icon id="destination"></ion-icon>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
