--- a/src/app/Components/router-start/router-start.component.scss
+++ b/src/app/Components/router-start/router-start.component.scss
@@ -1,3 +1,8 @@
+ion-grid {
+  height: 100%;
+  width: 100%;
+}
+
 .btn1 {
   position: relative;
   width: 100%;
@@ -19,20 +24,29 @@ h2 {
   line-height: 36px;
 }
 
-#createRoute {
-  // float: left;
+#createRouteButton {
   width: 60%;
   height: 35px;
   border-radius: 30px;
   font-family: effra;
   font-size: 75%;
   font-weight: 700;
-  margin-left: 15px;
+  margin-left: 20px;
   margin-top: 10px;
 }
 
+#startButton {
+    width: 50%;
+    height: 35px;
+    border-radius: 30px;
+    font-family: effra;
+    font-size: 75%;
+    font-weight: 700;
+    margin-left: 15px;
+    margin-top: 10px;
+}
+
 #cancel {
-  // float: right;
   width: 70%;
   border-radius: 30px;
   background-color: #4f4f4f;
@@ -42,13 +56,21 @@ h2 {
 
 #trash {
   z-index: 2;
-  float: right;
-  width: 20%;
+  width: 70%;
   border-radius: 30px;
   background-color: #4f4f4f;
   margin-right: 15px;
   margin-top: 10px;
 }
+
+#edit {
+    z-index: 3;
+    width: 70%;
+    border-radius: 30px;
+    background-color: #4f4f4f;
+    margin-right: 15px;
+    margin-top: 10px;
+  }
 
 .wrap1 {
   width: 100%;
@@ -70,10 +92,35 @@ h2 {
   z-index: 9999;
 }
 
-ion-grid {
-    height: 100%;
+#userPosition {
+    float: left;
+    width: 40px;
+    height: 40px;
+    background: url('../../../assets/icon/standort.svg');
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-#infoText {
-    height: 20%;
+#destination {
+    float: right;
+    width: 40px;
+    height: 40px;
+    background: url('../../../assets/icon/ziel.svg');
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+// #infoTextIN {
+//     visibility: visible;
+//     opacity: 1;
+//     transition: visibility 0s linear 0s, opacity 1000ms;
+// }
+
+// #infoTextOUT {
+//     visibility: hidden;
+//     opacity: 0;
+//     transition: visibility 0s linear 300ms, opacity 1000ms;
+// }
+
