--- a/src/app/Components/button-overlay/button-overlay.component.html
+++ b/src/app/Components/button-overlay/button-overlay.component.html
@@ -7,7 +7,7 @@
     <div class="icon1">
       <button class="favorIcons" id="homeIcon" (click)="saveIconAddress('home-outline')"></button>
       <button class="favorIcons" id="heartIcon" (click)="saveIconAddress('heart-outline')"></button>
-      <button class="favorIcons" id="shoppingIcon"(click)="saveIconAddress('shopping-outline')"></button>
+      <button class="favorIcons" id="shoppingIcon"(click)="saveIconAddress('basket-outline')"></button>
     </div>
     <div class="icon2">
       <button class="favorIcons" id="workIcon" (click)="saveIconAddress('briefcase-outline')"></button>
@@ -15,7 +15,7 @@
       <button class="favorIcons" id="bookIcon" (click)="saveIconAddress('book-outline')"></button>
     </div>
     <div>
-      <button ion-button class="saveFavorite" (click)="saveFarvo()">Als Favorite speichern</button>
+      <button ion-button class="saveFavorite" (click)="saveFavor()">Als Favorite speichern</button>
     </div>
     <div>
       <button class="cancel" (click)="dismiss()"></button>
