--- a/src/app/Components/search-bar/search-bar.component.scss
+++ b/src/app/Components/search-bar/search-bar.component.scss
@@ -1,7 +1,7 @@
 .over {
   background-color: #383838;
   width: 100vw;
-  height: auto;
+  height: 35vw;
   padding-top: 20px;
   padding-bottom: 10px;
   padding-left: 30px;
